# django-xml-parser

./: README.md  pyproject.toml  requirements.txt
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
app/: settings.py  urls.py
catalog/: views.py
templates/: base.html  catalog.html  index.html
